[tool.poetry]
name = "big-tide-prediction"
version = "0.1.0"
description = "BIG tide prediction API v2"
authors = ["Suhendra <suhendra0812@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.0"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
